--- a/src/app/components/invoices/invoices.component.html
+++ b/src/app/components/invoices/invoices.component.html
@@ -19,9 +19,9 @@
         />
 
       <mat-divider></mat-divider>
-        <div class="w-full grid grid-row mt-4 justify-end items-end">
+        <div class="w-full grid grid-row mt-4 sm:justify-end items-end">
           <button 
-            class="w-[15vw] bg-sky-900 text-white px-4 py-2 rounded mb-4 disabled:opacity-50" 
+            class="w-full sm:w-[15vw] bg-sky-900 text-white px-4 py-2 rounded mb-4 disabled:opacity-50" 
             [disabled]="selectedInvoices().length === 0" 
             (click)="downloadSelectedPDFs()"
             >
