--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -11,7 +11,7 @@
 .login-container {
     /* max-width: 400px;
     width: 350px; */
-    margin: 50px auto;
+    /* margin: 50px auto; */
     /* padding: 20px; */
     /* border: 1px solid #ddd; */
     border-radius: 8px;
