--- a/src/app/components/manage-users/manage-users.component.html
+++ b/src/app/components/manage-users/manage-users.component.html
@@ -1,33 +1,36 @@
 <div class="container">
     <div class="emptyContent" *ngIf="content == true">
-      <h1>Aún no tienes productos</h1>
-      <p>Agregar tus Productos</p>
+      <h1>Aún no tienes Usuarios</h1>
+      <p>Agrega tus Clientes o Colaboradores</p>
     </div>
 
     <div class="products-container" *ngIf="content == false">
-      <input 
+      <div class="relative  mb-4 search-container">
+        <input 
         type="text" 
         placeholder="Buscar usuarios..." 
         [(ngModel)]="searchTerm"
         (input)="filterUsers()"
+        class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 mb-4"
       />
+      </div>
 
       <!-- <mat-divider></mat-divider> -->
 
       <div class="flex border-b border-gray-300 items-center justify-center">
         <button
           class="px-4 py-2 focus:outline-none"
-          [ngClass]="{ 'border-b-2 border-blue-500 text-blue-500': activeTab === 'users' }"
-          (click)="activeTab = 'users'"
-        >
-          Usuarios
-        </button>
-        <button
-          class="px-4 py-2 focus:outline-none"
           [ngClass]="{ 'border-b-2 border-blue-500 text-blue-500': activeTab === 'clients' }"
           (click)="activeTab = 'clients'"
         >
           Clientes
+        </button>
+        <button
+          class="px-4 py-2 focus:outline-none"
+          [ngClass]="{ 'border-b-2 border-blue-500 text-blue-500': activeTab === 'users' }"
+          (click)="activeTab = 'users'"
+        >
+          Usuarios
         </button>
       </div>
 
@@ -66,9 +69,23 @@
           <p class="text-sm" [ngStyle]="{color: client.estado == 'Activo' ? 'green' : 'red'}">{{ client.estado }}</p>
         </div>
         <div class="w-full max-w-xs bg-white flex justify-center items-center gap-4 m-4">
-          <button (click)="openEditUserDialog(client)" class="mt-2 w-1/3 h-10 bg-sky-900 text-white py-2 rounded-md hover:bg-blue-700">Editar</button>
+          <button (click)="openEditClientDialog(client)" 
+            class="mt-2 w-1/3 h-10 bg-sky-900 text-white py-2 rounded-md hover:bg-blue-700"
+            [disabled]="client.numDocumento == '222222222222'"
+            class="mt-2 w-1/3 h-10 bg-sky-800 text-white py-2 rounded-md
+              hover:bg-sky-700
+              disabled:opacity-50
+              disabled:cursor-not-allowed
+              disabled:hover:bg-sky-800">Editar</button>
           <button *ngIf="client.estado == 'Inactivo'" (click)="changeStatusUser(client.id)"  class="mt-2 w-1/3 h-10 bg-green-900 text-white py-2 rounded-md hover:bg-green-700">Activar</button>
-          <button *ngIf="client.estado == 'Activo'" (click)="changeStatusUser(client.id)"   class="mt-2 w-1/3 h-10 bg-red-800 text-white py-2 rounded-md hover:bg-red-700">Desactivar</button>
+          <button *ngIf="client.estado == 'Activo'" (click)="changeStatusUser(client.id)"   
+            class="mt-2 w-1/3 h-10 bg-red-800 text-white py-2 rounded-md hover:bg-red-700" 
+            [disabled]="client.numDocumento == '222222222222'"
+            class="mt-2 w-1/3 h-10 bg-red-800 text-white py-2 rounded-md
+              hover:bg-red-700
+              disabled:opacity-50
+              disabled:cursor-not-allowed
+              disabled:hover:bg-red-800">Desactivar</button>
         </div>
       </div>
       }
