--- a/src/app/components/reports/reports.component.html
+++ b/src/app/components/reports/reports.component.html
@@ -1,11 +1,16 @@
-<div class="w-full h-full flex flex-col">
-  <form [formGroup]="reportParamsForm" class="flex flex-col" (ngSubmit)="consultarReporte()">
+<div class="w-full h-full flex flex-col px-2 sm:px-4">
+  <form
+    [formGroup]="reportParamsForm"
+    class="flex flex-col gap-4"
+    (ngSubmit)="consultarReporte()"
+  >
+    <!-- Select -->
     <div class="flex flex-col">
       <select
         name="typeReport"
         id="typeReport"
         formControlName="tipoReporte"
-        class="h-10 bg-gray-50 border border-gray-300 text-gray-900 round rounded-lg hover:cursor-pointer mt-5 mb-5"
+        class="h-10 w-full bg-gray-50 border border-gray-300 text-gray-900 rounded-lg hover:cursor-pointer mt-3"
       >
         <option value="00" selected disabled>Seleccionar Reporte</option>
         <option value="1">Todos los Productos</option>
@@ -16,59 +21,65 @@
         <option value="6">Devoluciones</option>
       </select>
     </div>
-    <div class="flex flex-row">
+
+    <!-- Inputs + botones -->
+    <div class="flex flex-col sm:flex-row gap-3">
       <input
         type="date"
         id="fechaInicio"
         formControlName="fechaInicio"
-        class="flex-col w-[15vw] h-10 bg-gray-50 border border-gray-300 text-gray-900 round rounded-lg mr-5"
+        class="w-full sm:w-[15vw] h-10 bg-gray-50 border border-gray-300 text-gray-900 rounded-lg"
       />
+
       <input
         type="date"
         name="fechaFinal"
         formControlName="fechaFinal"
         id="fechaFinal"
-        class="flex-col w-[15vw] h-10 bg-gray-50 border border-gray-300 text-gray-900 round rounded-lg mr-5"
+        class="w-full sm:w-[15vw] h-10 bg-gray-50 border border-gray-300 text-gray-900 rounded-lg"
       />
 
-       <button type="submit" class="flex-col w-[15vw] bg-sky-900 text-white py-2 rounded-md hover:bg-sky-600 mr-5">Consultar</button>
+      <button
+        type="submit"
+        class="w-full sm:w-[15vw] bg-sky-900 text-white py-2 rounded-md hover:bg-sky-600"
+      >
+        Consultar
+      </button>
 
-       <!-- Botón de descarga -->
-        <button
-            class="flex-col w-[15vw] bg-green-700 text-white px-4 py-2 rounded-md hover:bg-green-500"
-            (click)="descargarExcel()"
-        >
-            Descargar Excel
-        </button>
+      <button
+        class="w-full sm:w-[15vw] bg-green-700 text-white px-4 py-2 rounded-md hover:bg-green-500"
+        (click)="descargarExcel()"
+      >
+        Descargar Excel
+      </button>
     </div>
   </form>
 
-  <!-- Visualizador dinámico de datos tipo Excel -->
-   <div class="col-12 d-flex justify-content-between border border-gray-300 gap-2 pl-4  mt-5">
-    <div class="col-12">
+  <!-- Tabla -->
+  <div class="w-full border border-gray-300 mt-5 overflow-x-auto pl-2">
     <ngx-datatable
-      class="material custom-datatable ml-2"
+      class="material custom-datatable min-w-[600px] ml-2"
       [rows]="tableRows"
       [loadingIndicator]="tableLoadingIndicator"
       [columns]="tableColumns"
-      [columnMode]="tableColumnMode.flex"
+      [columnMode]="tableColumnMode.force"
       [headerHeight]="50"
       [footerHeight]="50"
       [rowHeight]="40"
       [scrollbarH]="true"
       [limit]="10"
       [messages]="tableMessage"
-      [count]="tableCount"     
-      [offset]="tableOffset"   
-      (page)="onPage($event)" 
+      [count]="tableCount"
+      [offset]="tableOffset"
+      (page)="onPage($event)"
+    >
+      <ngx-datatable-column
+        *ngFor="let col of tableColumns"
+        [prop]="col"
+        [flexGrow]="1.0"
+        [resizeable]="true"
       >
-      <ngx-datatable-column class="ml-2"
-      *ngFor="let col of tableColumns"
-      [prop]="col"
-      [flexGrow]="1.0"
-      [resizeable]="true">
       </ngx-datatable-column>
     </ngx-datatable>
   </div>
-   </div>
 </div>
